--- a/light.yml
+++ b/light.yml
@@ -379,7 +379,7 @@ action:
       - conditions: '{{ action == turn_on }}'
         sequence:
           - choose:
-              - conditions: '{{ states(light) == "off" }}'
+              - conditions: '{{ states(light) == "on" }}'
                 sequence:
                   - service: light.turn_on
                     entity_id: !input light
