--- a/light.yml
+++ b/light.yml
@@ -385,11 +385,12 @@ action:
                     entity_id: !input light
                     data:
                       transition: '{{ light_transition / 1000 }}'
-            default:
-              - service: light.turn_on
-                entity_id: !input light
-                data:
-                  transition: '{{ light_transition / 1000 }}'
+              - conditions: '{{ states(light) == "off" }}'
+                sequence:
+                  - service: light.turn_on
+                    entity_id: !input light
+                    data:
+                      transition: '{{ light_transition / 1000 }}'
       - conditions: '{{ action == turn_off }}'
         sequence:
           - service: light.turn_off
