--- a/light.yml
+++ b/light.yml
@@ -435,7 +435,7 @@ action:
                 sequence:
                   - service: light.turn_off
                     data:
-                      transition: '{{ light_transition / 1000 }}'
+                      transition: 1
                       entity_id: !input light
             default:
               - service: light.turn_on
