--- a/light.yml
+++ b/light.yml
@@ -513,91 +513,91 @@ action:
                         entity_id: !input light
                     - delay:
                         milliseconds: 50
-      - conditions: '{{ action == color_up and light_color_mode_id != "none" }}'
-        sequence:
-          choose:
-            - conditions: '{{ light_color_mode_id == "color_temp" }}'
-              sequence:
-                - service: light.turn_on
-                  data:
-                    color_temp: '{{ state_attr(light,"color_temp")|int + 50 }}'
-                    transition: 0.25
-                  entity_id: !input light
-            - conditions: '{{ light_color_mode_id == "hs_color" }}'
-              sequence:
-                - service: light.turn_on
-                  data:
-                    hs_color: '{{ [((state_attr(light,"hs_color")[0] or 0) + 15) % 360, 100] }}'
-                    transition: 0.25
-                  entity_id: !input light
-      - conditions: '{{ action == color_down and light_color_mode_id != "none" }}'
-        sequence:
-          choose:
-            - conditions: '{{ light_color_mode_id == "color_temp" }}'
-              sequence:
-                - service: light.turn_on
-                  data:
-                    color_temp: '{{ [state_attr(light,"color_temp")|int - 50, 1]|max }}'
-                    transition: 0.25
-                  entity_id: !input light
-            - conditions: '{{ light_color_mode_id == "hs_color" }}'
-              sequence:
-                - service: light.turn_on
-                  data:
-                    hs_color: '{{ [((state_attr(light,"hs_color")[0] or 0) - 15) % 360, 100] }}'
-                    transition: 0.25
-                  entity_id: !input light
-      - conditions: '{{ action == color_up_repeat and light_color_mode_id != "none" }}'
-        sequence:
-          choose:
-            - conditions: '{{ light_color_mode_id == "color_temp" }}'
-              sequence:
-                - repeat:
-                    while: '{{ true }}'
-                    sequence:
-                      - service: light.turn_on
-                        data:
-                          color_temp: '{{ state_attr(light,"color_temp")|int + 50 }}'
-                          transition: 0.25
-                        entity_id: !input light
-                      - delay:
-                          milliseconds: 250
-            - conditions: '{{ light_color_mode_id == "hs_color" }}'
-              sequence:
-                - repeat:
-                    while: '{{ true }}'
-                    sequence:
-                      - service: light.turn_on
-                        data:
-                          hs_color: '{{ [((state_attr(light,"hs_color")[0] or 0) + 15) % 360, 100] }}'
-                          transition: 0.25
-                        entity_id: !input light
-                      - delay:
-                          milliseconds: 250
-      - conditions: '{{ action == color_down_repeat and light_color_mode_id != "none" }}'
-        sequence:
-          choose:
-            - conditions: '{{ light_color_mode_id == "color_temp" }}'
-              sequence:
-                - repeat:
-                    while: '{{ true }}'
-                    sequence:
-                      - service: light.turn_on
-                        data:
-                          color_temp: '{{ [state_attr(light,"color_temp")|int - 50, 1]|max }}'
-                          transition: 0.25
-                        entity_id: !input light
-                      - delay:
-                          milliseconds: 250
-            - conditions: '{{ light_color_mode_id == "hs_color" }}'
-              sequence:
-                - repeat:
-                    while: '{{ true }}'
-                    sequence:
-                      - service: light.turn_on
-                        data:
-                          hs_color: '{{ [((state_attr(light,"hs_color")[0] or 0) - 15) % 360, 100] }}'
-                          transition: 0.25
-                        entity_id: !input light
-                      - delay:
-                          milliseconds: 250
+#      - conditions: '{{ action == color_up and light_color_mode_id != "none" }}'
+#        sequence:
+#          choose:
+#            - conditions: '{{ light_color_mode_id == "color_temp" }}'
+#              sequence:
+#                - service: light.turn_on
+#                  data:
+#                    color_temp: '{{ state_attr(light,"color_temp")|int + 50 }}'
+#                    transition: 0.25
+#                  entity_id: !input light
+#            - conditions: '{{ light_color_mode_id == "hs_color" }}'
+#              sequence:
+#                - service: light.turn_on
+#                  data:
+#                    hs_color: '{{ [((state_attr(light,"hs_color")[0] or 0) + 15) % 360, 100] }}'
+#                    transition: 0.25
+#                  entity_id: !input light
+#      - conditions: '{{ action == color_down and light_color_mode_id != "none" }}'
+#        sequence:
+#          choose:
+#            - conditions: '{{ light_color_mode_id == "color_temp" }}'
+#              sequence:
+#                - service: light.turn_on
+#                  data:
+#                    color_temp: '{{ [state_attr(light,"color_temp")|int - 50, 1]|max }}'
+#                    transition: 0.25
+#                  entity_id: !input light
+#            - conditions: '{{ light_color_mode_id == "hs_color" }}'
+#              sequence:
+#                - service: light.turn_on
+#                  data:
+#                    hs_color: '{{ [((state_attr(light,"hs_color")[0] or 0) - 15) % 360, 100] }}'
+#                    transition: 0.25
+#                  entity_id: !input light
+#      - conditions: '{{ action == color_up_repeat and light_color_mode_id != "none" }}'
+#        sequence:
+#          choose:
+#            - conditions: '{{ light_color_mode_id == "color_temp" }}'
+#              sequence:
+#                - repeat:
+#                    while: '{{ true }}'
+#                    sequence:
+#                      - service: light.turn_on
+#                        data:
+#                          color_temp: '{{ state_attr(light,"color_temp")|int + 50 }}'
+#                          transition: 0.25
+#                        entity_id: !input light
+#                      - delay:
+#                          milliseconds: 250
+#            - conditions: '{{ light_color_mode_id == "hs_color" }}'
+#              sequence:
+#                - repeat:
+#                    while: '{{ true }}'
+#                    sequence:
+#                      - service: light.turn_on
+#                        data:
+#                          hs_color: '{{ [((state_attr(light,"hs_color")[0] or 0) + 15) % 360, 100] }}'
+#                          transition: 0.25
+#                        entity_id: !input light
+#                      - delay:
+#                          milliseconds: 250
+#      - conditions: '{{ action == color_down_repeat and light_color_mode_id != "none" }}'
+#        sequence:
+#          choose:
+#            - conditions: '{{ light_color_mode_id == "color_temp" }}'
+#              sequence:
+#                - repeat:
+#                    while: '{{ true }}'
+#                    sequence:
+#                      - service: light.turn_on
+#                        data:
+#                          color_temp: '{{ [state_attr(light,"color_temp")|int - 50, 1]|max }}'
+#                          transition: 0.25
+#                        entity_id: !input light
+#                      - delay:
+#                          milliseconds: 250
+#            - conditions: '{{ light_color_mode_id == "hs_color" }}'
+#              sequence:
+#                - repeat:
+#                    while: '{{ true }}'
+#                    sequence:
+#                      - service: light.turn_on
+#                        data:
+#                          hs_color: '{{ [((state_attr(light,"hs_color")[0] or 0) - 15) % 360, 100] }}'
+#                          transition: 0.25
+#                        entity_id: !input light
+#                      - delay:
+#                          milliseconds: 250
