--- a/dimmer-controller.yml
+++ b/dimmer-controller.yml
@@ -227,7 +227,7 @@ blueprint:
     button_off_double_press:
       name: (Optional) Expose off button double press event
       description: Choose whether or not to expose the virtual double press event for the off button. Turn this on if you are providing an action for the off button double press event.
-      default: false
+      default: true
       selector:
         boolean:
     button_up_double_press:
