--- a/dimmer-controller.yml
+++ b/dimmer-controller.yml
@@ -474,14 +474,14 @@ action:
           - choose:
               - conditions: []
                 sequence: !input action_button_on_release
-      - conditions: '{{ trigger_action | string in off_double_press }}'
+      - conditions: '{{ trigger_action | string in button_off_double }}'
         sequence:
           # fire the event
           - event: ahb_controller_event
             event_data:
               controller: '{{ controller_id }}'
-              action: off_double_press
-                
+              action: button_off_double_press
+
       - conditions: '{{ trigger_action | string in button_off_short }}'
         sequence:
           - choose:
