--- a/dimmer-controller.yml
+++ b/dimmer-controller.yml
@@ -551,7 +551,7 @@ action:
                       sequence: !input action_button_off_long
             # if looping is not enabled run the custom action only once
             default: !input action_button_off_long
-      - conditions: '{{ trigger_action | string in button_off_release }}'
+      - conditions: '{{ trigger_action | string in off_double_press }}'
         sequence:
           # fire the event
           - event: ahb_controller_event
