--- a/dimmer-controller.yml
+++ b/dimmer-controller.yml
@@ -474,12 +474,11 @@ action:
           - choose:
               - conditions: []
                 sequence: !input action_button_on_release
-
       - conditions: '{{ trigger_action | string in button_off_short }}'
         sequence:
           - choose:
               # if double press event is enabled
-              - conditions: '{{ button_on_double_press }}'
+              - conditions: '{{ button_off_double_press }}'
                 sequence:
                   - choose:
                       # if previous event was a short press
@@ -544,7 +543,7 @@ action:
                       sequence: !input action_button_off_long
             # if looping is not enabled run the custom action only once
             default: !input action_button_off_long
-      - conditions: '{{ trigger_action | string in off_double_press }}'
+      - conditions: '{{ trigger_action | string in button_off_release }}'
         sequence:
           # fire the event
           - event: ahb_controller_event
