--- a/dimmer-controller.yml
+++ b/dimmer-controller.yml
@@ -227,7 +227,7 @@ blueprint:
     button_off_double_press:
       name: (Optional) Expose off button double press event
       description: Choose whether or not to expose the virtual double press event for the off button. Turn this on if you are providing an action for the off button double press event.
-      default: false
+      default: true
       selector:
         boolean:
     button_up_double_press:
@@ -474,11 +474,12 @@ action:
           - choose:
               - conditions: []
                 sequence: !input action_button_on_release
+
       - conditions: '{{ trigger_action | string in button_off_short }}'
         sequence:
           - choose:
               # if double press event is enabled
-              - conditions: '{{ button_off_double_press }}'
+              - conditions: '{{ button_on_double_press }}'
                 sequence:
                   - choose:
                       # if previous event was a short press
@@ -543,7 +544,7 @@ action:
                       sequence: !input action_button_off_long
             # if looping is not enabled run the custom action only once
             default: !input action_button_off_long
-      - conditions: '{{ trigger_action | string in button_off_release }}'
+      - conditions: '{{ trigger_action | string in off_double_press }}'
         sequence:
           # fire the event
           - event: ahb_controller_event
