--- a/light.yml
+++ b/light.yml
@@ -397,122 +397,122 @@ action:
                     entity_id: !input light
                     data:
                       transition: '{{ light_transition / 1000 }}'
-      - conditions: '{{ action == brightness_up }}'
-        sequence:
-          - choose:
-              # if light is off and smooth power on is disabled, turn it on at the previously saved brightness
-              - conditions: '{{ states(light) == "off" and not smooth_power_on}}'
-                sequence:
-                  - service: light.turn_on
-                    data:
-                      transition: '{{ light_transition / 1000 }}'
-                      entity_id: !input light
-              # if light is off and smooth power on is enabled, turn it on at minimum brightness
-              - conditions: '{{ states(light) == "off" and smooth_power_on}}'
-                sequence:
-                  - service: light.turn_on
-                    data:
-                      brightness: '{{ min_brightness }}'
-                      transition: '{{ light_transition / 1000 }}'
-                      entity_id: !input light
-            # else the light is on, hence increase its brightness
-            default:
-              - service: light.turn_on
-                data:
-                  brightness: '{{ [ [state_attr(light,"brightness")+step_short, min_brightness] | max, max_brightness] | min }}'
-                  transition: 1
-                  entity_id: !input light
-      - conditions: '{{ action == brightness_down and states(light) == "on" }}'
-        sequence:
-          - choose:
-              - conditions: '{{ smooth_power_off and state_attr(light,"brightness") == min_brightness }}'
-                sequence:
-                  - service: light.turn_off
-                    data:
-                      transition: 1
-                      entity_id: !input light
-            default:
-              - service: light.turn_on
-                data:
-                  brightness: '{{ [ [state_attr(light,"brightness")-step_short, min_brightness] | max, max_brightness] | min }}'
-                  transition: 1
-                  entity_id: !input light
-      - conditions: '{{ action == brightness_up_repeat }}'
-        sequence:
-          # first step for the smooth power on feature: subsequent steps can skip this check since light will be already on
-          - choose:
-              # if light is off and smooth power on is disabled, turn it on at the previously saved brightness
-              - conditions: '{{ states(light) == "off" and not smooth_power_on}}'
-                sequence:
-                  - service: light.turn_on
-                    data:
-                      transition: '{{ light_transition / 1000 }}'
-                      entity_id: !input light
-                  - delay:
-                      milliseconds: !input light_transition
-              # if light is off and smooth power on is enabled, turn it on at minimum brightness
-              - conditions: '{{ states(light) == "off" and smooth_power_on}}'
-                sequence:
-                  - service: light.turn_on
-                    data:
-                      brightness: '{{ min_brightness }}'
-                      transition: '{{ light_transition / 1000 }}'
-                      entity_id: !input light
-                  - delay:
-                      milliseconds: !input light_transition
-          # else move on to the loop for increasing the light brightness
-          - repeat:
-              while: '{{ true }}'
-              sequence:
-                - service: light.turn_on
-                  data:
-                    brightness: '{{ [ [state_attr(light,"brightness")+step_long, min_brightness] | max, max_brightness] | min }}'
-                    transition: 1
-                    entity_id: !input light
-                - delay:
-                    milliseconds: 50
-      - conditions: '{{ action == brightness_down_repeat and states(light) == "on"  }}'
-        sequence:
-          - choose:
-              # using a separate sequence for the smooth power off feature to not perform unnecessary checks at every iteration when the feature is disabled
-              - conditions: '{{ smooth_power_off }}'
-                sequence:
-                  - repeat:
-                      # continue lowering brightness until the light turns off
-                      while: '{{ states(light) != "off" }}'
-                      sequence:
-                        - choose:
-                            # if the light is at minimum brightness, turn it off
-                            - conditions: '{{ state_attr(light,"brightness") == min_brightness }}'
-                              sequence:
-                                - service: light.turn_off
-                                  data:
-                                    transition: '{{ light_transition / 1000 }}'
-                                    entity_id: !input light
-                                - delay:
-                                    milliseconds: !input light_transition
-                          # else lower the light's brightness
-                          default:
-                            - service: light.turn_on
-                              data:
-                                brightness: '{{ [ [state_attr(light,"brightness")-step_long, min_brightness] | max, max_brightness] | min }}'
-                                transition: 1
-                                entity_id: !input light
-                            - delay:
-                                milliseconds: 50
-            default:
-              - repeat:
-                  # continue lowering brightness until the light turns off
-                  while: '{{ states(light) != "off" }}'
-                  sequence:
-                    # lower the light's brightness. since smooth power off is disabled, never let the brightness move below the user-provided minimum
-                    - service: light.turn_on
-                      data:
-                        brightness: '{{ [ [state_attr(light,"brightness")-step_long, min_brightness] | max, max_brightness] | min }}'
-                        transition: 1
-                        entity_id: !input light
-                    - delay:
-                        milliseconds: 50
+#      - conditions: '{{ action == brightness_up }}'
+#        sequence:
+#          - choose:
+#              # if light is off and smooth power on is disabled, turn it on at the previously saved brightness
+#              - conditions: '{{ states(light) == "off" and not smooth_power_on}}'
+#                sequence:
+#                  - service: light.turn_on
+#                    data:
+#                      transition: '{{ light_transition / 1000 }}'
+#                      entity_id: !input light
+#              # if light is off and smooth power on is enabled, turn it on at minimum brightness
+#              - conditions: '{{ states(light) == "off" and smooth_power_on}}'
+#                sequence:
+#                  - service: light.turn_on
+#                    data:
+#                      brightness: '{{ min_brightness }}'
+#                      transition: '{{ light_transition / 1000 }}'
+#                      entity_id: !input light
+#            # else the light is on, hence increase its brightness
+#            default:
+#              - service: light.turn_on
+#                data:
+#                  brightness: '{{ [ [state_attr(light,"brightness")+step_short, min_brightness] | max, max_brightness] | min }}'
+#                  transition: 1
+#                  entity_id: !input light
+#      - conditions: '{{ action == brightness_down and states(light) == "on" }}'
+#        sequence:
+#          - choose:
+#              - conditions: '{{ smooth_power_off and state_attr(light,"brightness") == min_brightness }}'
+#                sequence:
+#                  - service: light.turn_off
+#                    data:
+#                      transition: 1
+#                      entity_id: !input light
+#            default:
+#              - service: light.turn_on
+#                data:
+#                  brightness: '{{ [ [state_attr(light,"brightness")-step_short, min_brightness] | max, max_brightness] | min }}'
+#                  transition: 1
+#                  entity_id: !input light
+#      - conditions: '{{ action == brightness_up_repeat }}'
+#        sequence:
+#          # first step for the smooth power on feature: subsequent steps can skip this check since light will be already on
+#          - choose:
+#              # if light is off and smooth power on is disabled, turn it on at the previously saved brightness
+#              - conditions: '{{ states(light) == "off" and not smooth_power_on}}'
+#                sequence:
+#                  - service: light.turn_on
+#                    data:
+#                      transition: '{{ light_transition / 1000 }}'
+#                      entity_id: !input light
+#                  - delay:
+#                      milliseconds: !input light_transition
+#              # if light is off and smooth power on is enabled, turn it on at minimum brightness
+#              - conditions: '{{ states(light) == "off" and smooth_power_on}}'
+#                sequence:
+#                  - service: light.turn_on
+#                    data:
+#                      brightness: '{{ min_brightness }}'
+#                      transition: '{{ light_transition / 1000 }}'
+#                      entity_id: !input light
+#                  - delay:
+#                      milliseconds: !input light_transition
+#          # else move on to the loop for increasing the light brightness
+#          - repeat:
+#              while: '{{ true }}'
+#              sequence:
+#                - service: light.turn_on
+#                  data:
+#                    brightness: '{{ [ [state_attr(light,"brightness")+step_long, min_brightness] | max, max_brightness] | min }}'
+#                    transition: 1
+#                    entity_id: !input light
+#                - delay:
+#                    milliseconds: 50
+#      - conditions: '{{ action == brightness_down_repeat and states(light) == "on"  }}'
+#        sequence:
+#          - choose:
+#              # using a separate sequence for the smooth power off feature to not perform unnecessary checks at every iteration when the feature is disabled
+#              - conditions: '{{ smooth_power_off }}'
+#                sequence:
+#                  - repeat:
+#                      # continue lowering brightness until the light turns off
+#                      while: '{{ states(light) != "off" }}'
+#                      sequence:
+#                        - choose:
+#                            # if the light is at minimum brightness, turn it off
+#                            - conditions: '{{ state_attr(light,"brightness") == min_brightness }}'
+#                              sequence:
+#                                - service: light.turn_off
+#                                  data:
+#                                    transition: '{{ light_transition / 1000 }}'
+#                                    entity_id: !input light
+#                                - delay:
+#                                    milliseconds: !input light_transition
+#                          # else lower the light's brightness
+#                          default:
+#                            - service: light.turn_on
+#                              data:
+#                                brightness: '{{ [ [state_attr(light,"brightness")-step_long, min_brightness] | max, max_brightness] | min }}'
+#                                transition: 1
+#                                entity_id: !input light
+#                            - delay:
+#                                milliseconds: 50
+#            default:
+#              - repeat:
+#                  # continue lowering brightness until the light turns off
+#                  while: '{{ states(light) != "off" }}'
+#                  sequence:
+#                    # lower the light's brightness. since smooth power off is disabled, never let the brightness move below the user-provided minimum
+#                    - service: light.turn_on
+#                      data:
+#                        brightness: '{{ [ [state_attr(light,"brightness")-step_long, min_brightness] | max, max_brightness] | min }}'
+#                        transition: 1
+#                        entity_id: !input light
+#                    - delay:
+#                        milliseconds: 50
 #      - conditions: '{{ action == color_up and light_color_mode_id != "none" }}'
 #        sequence:
 #          choose:
