--- a/cover.yml
+++ b/cover.yml
@@ -17,7 +17,6 @@ blueprint:
     🚀 This blueprint is part of the **[Awesome HA Blueprints](https://epmatt.github.io/awesome-ha-blueprints) project**.
 
     ℹ️ Version 2022.07.30
-  source_url: https://github.com/EPMatt/awesome-ha-blueprints/blob/main/blueprints/hooks/cover/cover.yaml
   domain: automation
   input:
     controller_device:
@@ -65,17 +64,19 @@ variables:
   # supported controllers and mappings
   controller_mapping:
     Philips 929002398602 Hue Dimmer switch v2:
-      open_cover: button_off_double
-      close_cover: button_off_long
-      stop_cover_all: button_off_short
-    IKEA E1524/E1810 TRÅDFRI Wireless 5-Button Remote:
       open_cover: button_up_short
+      close_cover: button_down_short
+      close_cover_tilt: button_left_long
+      open_cover_tilt: button_right_long
+      stop_cover_all: button_off_long
+    IKEA E1524/E1810 TRÅDFRI Wireless 5-Button Remote:
+      open_cover: button_off_double
       close_cover: button_down_short
       close_cover_tilt: button_left_short
       open_cover_tilt: button_right_short
       stop_cover_all: button_center_short
     IKEA E1743 TRÅDFRI On/Off Switch & Dimmer:
-      open_cover: button_up_short
+      open_cover: button_off_double
       open_cover_tilt: button_up_long
       close_cover: button_down_short
       close_cover_tilt: button_down_long
