--- a/light.yml
+++ b/light.yml
@@ -403,34 +403,34 @@ action:
       - conditions: '{{ action == switch_dimming }}'
         sequence:
           - choose:
-#            - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= max_brightness and state_attr(light,"brightness") > (3 * (max_brightness / 4)) }}'
+              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= max_brightness and state_attr(light,"brightness") > (3 * (max_brightness / 4)) }}'
+                sequence:
+                  service: light.turn_on
+                  data:
+                    brightness: '{{ 3 * (max_brightness / 4) }}'
+                    transition: 0.25
+                    entity_id: !input light
+#            - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (3 * (max_brightness / 4)) and state_attr(light,"brightness") > (max_brightness / 2) }}'
 #              sequence:
 #                service: light.turn_on
 #                data:
-#                  brightness: '{{ 3 * (max_brightness / 4) }}'
+#                  brightness: '{{ max_brightness / 2 }}'
 #                  transition: 0.25
 #                  entity_id: !input light
-            - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (3 * (max_brightness / 4)) and state_attr(light,"brightness") > (max_brightness / 2) }}'
-              sequence:
-                service: light.turn_on
-                data:
-                  brightness: '{{ max_brightness / 2 }}'
-                  transition: 0.25
-                  entity_id: !input light
-            - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 2) and state_attr(light,"brightness") > (max_brightness / 4) }}'
-              sequence:
-                service: light.turn_on
-                data:
-                  brightness: '{{ max_brightness / 4 }}'
-                  transition: 0.25
-                  entity_id: !input light
-            - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 4) }}'
-              sequence:
-                service: light.turn_on
-                data:
-                  brightness: '{{ max_brightness }}'
-                  transition: 0.25
-                  entity_id: !input light
+#            - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 2) and state_attr(light,"brightness") > (max_brightness / 4) }}'
+#              sequence:
+#                service: light.turn_on
+#                data:
+#                  brightness: '{{ max_brightness / 4 }}'
+#                  transition: 0.25
+#                  entity_id: !input light
+#            - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 4) }}'
+#              sequence:
+#                service: light.turn_on
+#                data:
+#                  brightness: '{{ max_brightness }}'
+#                  transition: 0.25
+#                  entity_id: !input light
 
 
 #      - conditions: '{{ action == brightness_up }}'
