--- a/light.yml
+++ b/light.yml
@@ -410,21 +410,21 @@ action:
                     brightness: '{{ 3 * (max_brightness / 4) }}'
                     transition: '{{ light_transition / 1000 }}'
                     entity_id: !input light
-              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (3 * (max_brightness / 4)) and state_attr(light,"brightness") > (max_brightness / 2) }}'
+              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (3 * (max_brightness / 4) + 5) and state_attr(light,"brightness") > (max_brightness / 2) }}'
                 sequence:
                   service: light.turn_on
                   data:
                     brightness: '{{ max_brightness / 2 }}'
                     transition: 0.25
                     entity_id: !input light
-              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 2) and state_attr(light,"brightness") > (max_brightness / 4) }}'
+              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 2) + 5 and state_attr(light,"brightness") > (max_brightness / 4) }}'
                 sequence:
                   service: light.turn_on
                   data:
                     brightness: '{{ max_brightness / 4 }}'
                     transition: 0.25
                     entity_id: !input light
-              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 4) }}'
+              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 4) + 5 }}'
                 sequence:
                   service: light.turn_on
                   data:
