--- a/light.yml
+++ b/light.yml
@@ -415,22 +415,22 @@ action:
                   service: light.turn_on
                   data:
                     brightness: '{{ max_brightness / 2 }}'
-                    transition: 0.25
+                    transition: '{{ light_transition / 1000 }}'
                     entity_id: !input light
-              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 2) + 5 and state_attr(light,"brightness") > (max_brightness / 4) }}'
-                sequence:
-                  service: light.turn_on
-                  data:
-                    brightness: '{{ max_brightness / 4 }}'
-                    transition: 0.25
-                    entity_id: !input light
-              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 4) + 5 }}'
-                sequence:
-                  service: light.turn_on
-                  data:
-                    brightness: '{{ max_brightness }}'
-                    transition: 0.25
-                    entity_id: !input light
+#              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 2) + 5 and state_attr(light,"brightness") > (max_brightness / 4) }}'
+#                sequence:
+#                  service: light.turn_on
+#                  data:
+#                    brightness: '{{ max_brightness / 4 }}'
+#                    transition: 0.25
+#                    entity_id: !input light
+#              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 4) + 5 }}'
+#                sequence:
+#                  service: light.turn_on
+#                  data:
+#                    brightness: '{{ max_brightness }}'
+#                    transition: 0.25
+#                    entity_id: !input light
 
 
 #      - conditions: '{{ action == brightness_up }}'
