--- a/light.yml
+++ b/light.yml
@@ -410,11 +410,11 @@ action:
                     brightness: '{{ 3 * (max_brightness / 4) }}'
                     transition: '{{ light_transition / 1000 }}'
                     entity_id: !input light
-              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (3 * (max_brightness / 4)) and state_attr(light,"brightness") > (2 * (max_brightness / 4)) }}'
+              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") > (2 * (max_brightness / 4)) }}'
                 sequence:
                   service: light.turn_on
                   data:
-                    brightness: '{{ 3 * (max_brightness / 4) }}'
+                    brightness: '{{ max_brightness / 2 }}'
                     transition: '{{ light_transition / 1000 }}'
                     entity_id: !input light
 #              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 2) + 5 and state_attr(light,"brightness") > (max_brightness / 4) }}'
